# qmetatype

./: CMakeLists.txt  README.txt  design.txt  extensions.h  main.cpp  metatype.cpp  metatype.h  metatype.pro  metatype_fwd.h  metatype_impl.h
extensions/: allocation.h  convert.h  extensions.cpp  extensions.h  name.h  streams.h
src/: CMakeLists.txt  metatype_fwd.h  metatype_impl.h
src/extensions/: convert.h  extensions.cpp  extensions.h  name.h
tests/: CMakeLists.txt
tests/convert/: CMakeLists.txt  main.cpp
tests/ids/: CMakeLists.txt  main.cpp
tests/manual/: CMakeLists.txt  main.cpp
